--- a/Eclipse_Spring_WorkSpace/UserManagementAppMaven/pom.xml
+++ b/Eclipse_Spring_WorkSpace/UserManagementAppMaven/pom.xml
@@ -196,7 +196,11 @@
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
 		</dependency>
-
+<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.3</version>
+        </dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
